vlib/v/checker/tests/struct_implements_interface_more_than_once_err.vv
import v.ast.walker { Visitor }
import v.ast { Node }

struct Walker implements Visitor, Visitor, Visitor {
	aaa string
}

fn (mut n Walker) visit(node &Node) ! {
	panic('not implemented')
}
